Fixed horizontal scroll on book and programs

--- a/_sass/_ahh.scss
+++ b/_sass/_ahh.scss
@@ -36,7 +36,14 @@ font-size: 4rem;
 
 @media only screen and (max-width: $screen-sm) {
   h2.services {
-    font-size: 1.65rem;
+    font-size: 1.75rem;
+  }
+}
+
+@media only screen and (max-width: $screen-sm) {
+  h2.artisan-title {
+    font-size: 1.9rem;
+    line-height: 1.25;
   }
 }
 
